services/jellyfin/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      nodeSelector:
        nvidia.com/gpu.present: 'true'
      runtimeClassName: nvidia
      hostname: jellyfin
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.9.7
          resources:
            limits:
              memory: 1G
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
          ports:
            - name: web
              containerPort: 8096
        - name: zap2xml
          image: shuaiscott/zap2xml:latest
          volumeMounts:
            - name: config-volume
              mountPath: /data
